feat(dao): enhance AccountDAOImpl with IBAN-based lookups, immutability, and account existence checks